--- a/src/Styles/Navbar2.scss
+++ b/src/Styles/Navbar2.scss
@@ -1,10 +1,12 @@
 .navbar_two{
+    position: relative;
     background-image: linear-gradient(rgb(112, 109, 109), white);
     width: 100%;
     height: 10vh;
     display: flex;
     align-items: centre;
     justify-content: space-between;
+    
     >div{
         margin: 0.5rem;
         padding: 0.2rem;
