--- a/src/Styles/Navbar2.scss
+++ b/src/Styles/Navbar2.scss
@@ -15,9 +15,46 @@
             height: 40%;
             margin-top: 10px;
             padding: 5px;
+
+            &:hover{
+                transition: 0.5s;
+                transform: scale(1.4);
+                cursor: pointer;
+            }
         }
     }
 
    
 
+}
+
+@media screen and (min-width:1150px){
+    .navbar_two{
+        position: relative;
+        background-image: linear-gradient(rgb(112, 109, 109), white);
+        width: 100%;
+        height: 10vh;
+        display: flex;
+        align-items: centre;
+        justify-content: space-between;
+        
+        >div{
+            margin: 0.5rem;
+            padding: 0.2rem;
+            >img{
+                width: 100%;
+                height: 40%;
+                margin-top: 10px;
+                padding: 5px;
+    
+                &:hover{
+                    transition: 0.5s;
+                    transform: scale(2);
+                    cursor: pointer;
+                }
+            }
+        }
+    
+
+}
 }
