--- a/src/Styles/Navbar.scss
+++ b/src/Styles/Navbar.scss
@@ -1,11 +1,15 @@
 .logo{
+    background-image: linear-gradient(to right, rgb(95, 95, 11), rgb(252, 252, 200));
     display: flex;
     align-items: center;
     justify-content: center;
     width: 100%;
     height: 20vh;
-    >img {
-        width: 100%;
-        height: 20vh;
+    .logo_link{
+        >img {
+                width: 100%;
+                height: 20vh;
+            }
     }
+    
 }
