--- a/src/Styles/Navbar2.scss
+++ b/src/Styles/Navbar2.scss
@@ -10,18 +10,21 @@
     >div{
         margin: 0.5rem;
         padding: 0.2rem;
-        >img{
-            width: 100%;
-            height: 40%;
-            margin-top: 10px;
-            padding: 5px;
+            >.link{
+                >img {
+                        width: 100%;
+                        height: 40%;
+                        margin-top: 10px;
+                        padding: 5px;
 
-            &:hover{
-                transition: 0.5s;
-                transform: scale(1.4);
-                cursor: pointer;
+                        &:hover {
+                            transition: 0.5s;
+                            transform: scale(1.4);
+                            cursor: pointer;
+                        }
+                    }
             }
-        }
+       
     }
 
    
