--- a/src/Styles/Navbar.scss
+++ b/src/Styles/Navbar.scss
@@ -1,15 +1,115 @@
-.logo{
-    background-image: linear-gradient(to right, rgb(95, 95, 11), rgb(252, 252, 200));
-    display: flex;
-    align-items: center;
-    justify-content: center;
+*{
+    text-decoration: none;
+    text-transform: uppercase;
+    text-overflow: ellipsis;
+    font: 500 1rem black;
+    color: black;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+
+nav{
+    text-decoration: none;
     width: 100%;
-    height: 20vh;
-    .logo_link{
-        >img {
-                width: 100%;
-                height: 20vh;
-            }
+    height: 6vh;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    > .left {
+        height: 50%;
+        margin-right: 5em;
+        width: fit-content;
+        margin-right: 5em;
+        padding: 2vh 2vh 0 2vh;
     }
+
+    >.mid{
+        height: 15%;
+        width: 40%;
+        display: flex;
+        justify-content: space-between;
+        padding: 1em;
+        box-shadow: 10px 10px 8px #888888;
+        border-radius: 5px;
+    }
+    >.right{
+        justify-content: space-around;
+        height: 8vh;
+        width: 25%;
+        display: flex;
+        padding: 1em;
+
+        >div{
+            width: 20%;
+            padding: 0.7em;
+            height: 10vh;
+        }
+    }
+}
+
+.mid_heading:hover{
+    color: #888888;
+}
+.right_image{
+    margin-top: 0.5em;
+    padding-left: 1em;
+    padding-right: 2em;
+    width: 50%;
+    height: 30%;
+    &:hover{
+        transition: 0.5s;
+        transform: scale(1.2);
+    }
+}
+
+@media screen and (min-width:1150px){
+    nav {
+            text-decoration: none;
+            width: 100%;
+            height: 6vh;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
     
+            >.left {
+                height: 40%;
+                margin-right: 5em;
+                width: fit-content;
+                margin-right: 5em;
+                padding: 2vh 2vh 0 2vh
+            }
+    
+            >.mid {
+                padding-right: 5em;
+                width: 40%;
+                display: flex;
+                // justify-content: space-between;
+                padding: 1em;
+                box-shadow: 10px 10px 8px #888888;
+                border-radius: 5px;
+                >div{
+                    margin-right: 5em;
+                    margin-left: 2em;
+                }
+            }
+    
+            >.right {
+                justify-content: space-between;
+                width: 20%;
+                display: flex;
+                padding: 1em;
+                margin-right: 0.2em;
+    
+                >div {
+                    width: 20%;
+                    padding: 0.7em;
+                }
+            }
+        }
+
+                .right_image {
+                    margin-top: 0.5em;
+                    width: 40%;
+                    height: 30%;
+                }
 }
