--- a/src/Styles/Navbar2.scss
+++ b/src/Styles/Navbar2.scss
@@ -19,7 +19,7 @@
 
                         &:hover {
                             transition: 0.5s;
-                            transform: scale(1.4);
+                            transform: scale(1.2);
                             cursor: pointer;
                         }
                     }
@@ -44,18 +44,24 @@
         >div{
             margin: 0.5rem;
             padding: 0.2rem;
-            >img{
-                width: 100%;
-                height: 40%;
-                margin-top: 10px;
-                padding: 5px;
-    
-                &:hover{
-                    transition: 0.5s;
-                    transform: scale(2);
-                    cursor: pointer;
-                }
+                >.link{
+                    display: flex;
+                    align-items: centre;
+                    justify-content: space-between;
+                  >img {
+                        width: 50%;
+                        height: 40%;
+                        margin-top: 10px;
+                        padding: 5px;
+                
+                        &:hover {
+                            transition: 1s;
+                            transform: scale(1.5);
+                            cursor: pointer;
+                        }
+                    }
             }
+           
         }
     
 
