--- a/src/Styles/Navbar2.scss
+++ b/src/Styles/Navbar2.scss
@@ -44,10 +44,11 @@
         >div{
             margin: 0.5rem;
             padding: 0.2rem;
-                >.link{
-                    display: flex;
-                    align-items: centre;
-                    justify-content: space-between;
+                // >.link{
+                //     visibility: visible;
+                //     display: flex;
+                //     align-items: centre;
+                //     justify-content: center;
                   >img {
                         width: 50%;
                         height: 40%;
@@ -60,7 +61,7 @@
                             cursor: pointer;
                         }
                     }
-            }
+            // }
            
         }
     
